--- a/style.css
+++ b/style.css
@@ -4,17 +4,6 @@ html {
   background-size: cover;
 }
 
-.title{
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-direction: column;
-  font-size: xx-large;
-  text-align: center;
-  color: white;
-  text-shadow: 3px 3px goldenrod;
-}
-
 body,html {
   margin: 0;
   padding: 0;
@@ -39,7 +28,7 @@ body,html {
   width: 10rem;
   text-align: center;
   color: white;
-  background: rgba(0,0,0,0.4);
+  background: rgba(3, 3, 3, 0.4);
   text-shadow: 0 0 .5rem black;
 }
 
@@ -60,4 +49,10 @@ kbd {
   text-transform: uppercase;
   letter-spacing: .1rem;
   color: #ffc600;
+}
+
+.footer{
+  color: white;
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+  padding: 20px;
 }
